# Kaleidoscope

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.cpp~RF6333c0.TMP
Kaleidoscope/: CMakeLists.txt  Kaleidoscope.cpp  toy.cpp
